--- a/src/components/List/buyList.css
+++ b/src/components/List/buyList.css
@@ -1,12 +1,15 @@
 
 .allCard {
-  
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 15px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 5rem;
-  gap: 0.2rem ;
-  position: relative;
+  /* justify-content: space-around; */
+  /* margin: 5rem; */
+  gap: 15px;
+  /* position: relative; */
 }
 
 @media (max-width: 600px) {
@@ -27,6 +30,7 @@ img {
   height: 236px;
 }
 .p1 {
+  padding: 10px;
   margin: 0px;
   font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: 400;
@@ -36,6 +40,7 @@ img {
   color: rgb(93, 97, 103);
 }
 .p2 {
+  padding-left:  10px; ;
   margin: 0px 0px 0.35em;
   font-family: Roboto, Helvetica, Arial, sans-serif;
   line-height: 1.334;
@@ -45,6 +50,7 @@ img {
 }
 
 .price {
+  text-decoration:underline;
   margin: 0px;
   font-family: Roboto, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -54,6 +60,7 @@ img {
   font-weight: 600;
   text-decoration: none;
   opacity: 1;
+  /* display: inline; */
 }
 .buy-button {
   display: none;
@@ -122,4 +129,12 @@ img {
 @keyframes fadeout {
   from {bottom: 30px; opacity: 1;}
   to {bottom: 0; opacity: 0;}
+}
+.display{
+  display: inline;
+  padding: 10px;
+ 
+}
+.offStyle{
+  text-decoration:line-through;
 }
