--- a/src/components/List/buyList.css
+++ b/src/components/List/buyList.css
@@ -131,6 +131,9 @@ img {
   to {bottom: 0; opacity: 0;}
 }
 .display{
+  color: rgb(93, 97, 103);
+  font-size: 13px;
+  font-weight: 600;
   display: inline;
   padding: 10px;
  
